<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/brokerIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="1.1.1.1"
        android:ems="10"
        android:hint="@string/broker_ip"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideTop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp"
        tools:viewBindingIgnore="true" />

    <EditText
        android:id="@+id/brokerPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="22"
        android:ems="10"
        android:hint="@string/broker_port"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brokerIP" />

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/connect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brokerPort" />

    <LinearLayout
        android:id="@+id/vertLinearLayout"
        android:layout_width="381dp"
        android:layout_height="154dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/margins_severity"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect">

        <TextView
            android:id="@+id/severityTitle"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/severity"
            android:textAllCaps="true"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/severities"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/lowSeverity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_on"
                android:backgroundTint="#0c822f"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:minWidth="80dp"
                android:minHeight="80dp"
                android:text="@string/low_severity" />

            <RadioButton
                android:id="@+id/mediumSeverity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_off"
                android:backgroundTint="#d6d304"
                android:button="@null"
                android:gravity="center"
                android:minWidth="80dp"
                android:minHeight="80dp"
                android:text="@string/medium_severity" />

            <RadioButton
                android:id="@+id/highSeverity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_off"
                android:backgroundTint="#e6070e"
                android:button="@null"
                android:gravity="center"
                android:minWidth="80dp"
                android:minHeight="80dp"
                android:text="@string/high_severity" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vertLinearLayout" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>